--- a/Views/AppStatusBarView.xaml
+++ b/Views/AppStatusBarView.xaml
@@ -1,19 +1,25 @@
-﻿<UserControl x:Class="HCL_ODA_TestPAD.Views.AppStatusBarView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:HCL_ODA_TestPAD.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+﻿<UserControl
+    x:Class="HCL_ODA_TestPAD.Views.AppStatusBarView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:HCL_ODA_TestPAD.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <Style TargetType="ProgressBar">
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="ProgressBar" >
+                    <ControlTemplate TargetType="ProgressBar">
                         <Grid>
                             <Rectangle x:Name="PART_Track" Fill="{TemplateBinding Background}" />
-                            <Rectangle x:Name="PART_Indicator" Stroke="Black" StrokeThickness="1" HorizontalAlignment="Left">
+                            <Rectangle
+                                x:Name="PART_Indicator"
+                                HorizontalAlignment="Left"
+                                Stroke="Black"
+                                StrokeThickness="1">
                                 <Rectangle.Fill>
                                     <RadialGradientBrush>
                                         <GradientStop Offset="0" Color="Yellow" />
@@ -21,14 +27,17 @@
                                     </RadialGradientBrush>
                                 </Rectangle.Fill>
                             </Rectangle>
-                            <TextBlock Text="{Binding ProgressPercentage, StringFormat={}{0:0.#} %}"
-                                   Foreground="{TemplateBinding Foreground}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            <TextBlock
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Foreground="{TemplateBinding Foreground}"
+                                Text="{Binding ProgressInfo}" />
                         </Grid>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsIndeterminate" Value="True">
-                                <Setter Property="Fill" TargetName="PART_Indicator">
+                                <Setter TargetName="PART_Indicator" Property="Fill">
                                     <Setter.Value>
-                                        <LinearGradientBrush EndPoint=".1,1" SpreadMethod="Repeat">
+                                        <LinearGradientBrush SpreadMethod="Repeat" EndPoint=".1,1">
                                             <GradientStop Offset="0" Color="Orange" />
                                             <GradientStop Offset="1" Color="Red" />
                                         </LinearGradientBrush>
@@ -42,8 +51,8 @@
             <Setter Property="Background">
                 <Setter.Value>
                     <LinearGradientBrush EndPoint="1,0">
-                        <GradientStop Color="DarkBlue" Offset="0" />
-                        <GradientStop Color="LightBlue" Offset="1" />
+                        <GradientStop Offset="0" Color="DarkBlue" />
+                        <GradientStop Offset="1" Color="LightBlue" />
                     </LinearGradientBrush>
                 </Setter.Value>
             </Setter>
@@ -51,22 +60,33 @@
         </Style>
     </UserControl.Resources>
 
-    <StatusBar x:Name="TestPAD_StatusBar"  Background="{Binding Path=MessageStatusColor}">
+    <StatusBar x:Name="TestPAD_StatusBar" Background="{Binding Path=MessageStatusColor}">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="300"/>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="300" />
             </Grid.ColumnDefinitions>
-            <Label FontWeight="Bold"  Content="{Binding Path=StatusMessage}" HorizontalAlignment="Left" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
-            <ProgressBar Grid.Column="1" Margin="0,3,0,3" Value="{Binding Path=ProgressValue}" 
-                         Maximum="{Binding ProgressMax}" 
-                         Visibility="{Binding ProgressBarVisibility}"
-                         VerticalAlignment="Stretch" Foreground="DarkRed" FontSize="14" FontWeight="Bold">
+            <Label
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                HorizontalContentAlignment="Center"
+                Content="{Binding Path=StatusMessage}"
+                FontWeight="Bold" />
+            <ProgressBar
+                Grid.Column="1"
+                Margin="0,3,0,3"
+                VerticalAlignment="Stretch"
+                FontSize="14"
+                FontWeight="Bold"
+                Foreground="DarkRed"
+                Maximum="{Binding ProgressMax}"
+                Visibility="{Binding ProgressBarVisibility}"
+                Value="{Binding Path=ProgressValue}">
                 <ProgressBar.Background>
-                    <LinearGradientBrush EndPoint=".5,0" SpreadMethod="Reflect">
+                    <LinearGradientBrush SpreadMethod="Reflect" EndPoint=".5,0">
                         <GradientStop Offset="0" Color="LightYellow" />
                         <GradientStop Offset="0.5" Color="RosyBrown" />
                     </LinearGradientBrush>
